test/parallel/forall/may-vs-must-par/stmt-mustpar-err-iter1ser.good
stmt-mustpar-err-iter1ser.chpl:6: error: A standalone or leader iterator is not found for the iterable expression in this forall loop
